<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">健康S生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">关于</string>
    <string name="title_activity_main">登录注册</string>
    <string name="title_activity_get_location">跑步测量</string>
    <string name="title_activity_heart_rate">心率测量</string>
    <string name="histroy">历史记录</string>
    <string name="title_activity_location_result">跑步结果</string>
    <string name="title_activity_heart_result">心率结果</string>
    <string name="title_activity_heart_history">心率历史</string>
    <string name="download">下载记录</string>
    <string name="clear">清空</string>
    <string name="cancle">取消</string>
    <string name="back">返回</string>
    <string name="saverecord">保存本次记录</string>
    <string name="hrupload">上传此次记录</string>
    <string name="hrdelete">删除此次记录</string>
    <string name="hrstatic">静息心率</string>
    <string name="hrmax">最大心率</string>
    <string name="hrsport">运动后心率</string>
    <string name="hrlast">最近一次的测量</string>
    <string name="bpm">bpm</string>
    <string name="hrinit">00</string>
    <string name="title_activity_maintitle">健康S生活</string>
    <string name="title_activity_music_main">音乐播放</string>
    <string name="title_activity_music_player">正在播放</string>
    <string name="title_activity_music_list">播放列表</string>
    <string name="title_activity_backups">个人中心</string>
    <string name="title_activity_client_main">ClientMain</string>
    <string name="title_activity_recovery">RecoveryActivity</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">新用户注册</string>
    <string name="title_activity_select_sports">选择运动项目</string>
    <string name="btn_select_jog">Jog</string>
    <string name="btn_select_pushup">Push-Up</string>
    <string name="btn_select_situp">Sit-Up</string>
    <string name="btn_select_walk">Walk</string>
    <string name="btn_start_sport">Start</string>
    <string name="btn_stop_sport">Stop</string>
    <string name="btn_save_sports">Save</string>
    <string name="btn_drop_sports">Delete</string>
    <string name="title_activity_all">全部</string>
    <string name="title_activity_jogging">跑 步</string>
    <string name="title_activity_push_up">俯卧撑</string>
    <string name="title_activity_sit_up">仰卧起坐</string>
    <string name="title_activity_walking">WalkingActivity</string>
    <string name="title_activity_show_push_up">锻炼结果</string>
    <string name="title_activity_show_jog">ShowJogActivity</string>
    <string name="title_activity_show_walk">ShowWalkActivity</string>
    <string name="title_activity_show_sit_up">仰卧起坐结果</string>
    <string name="title_activity_show_record">运动数据统计</string>
    <string name="title_activity_show_sports_history">运动历史记录</string>
    <string name="text_inited_motion_number">0</string>
    <string name="btn_clear_record">清空数据</string>
    <string name="title_activity_cal_calorie">CalCalorie</string>
    <string name="title_activity_show_cal_diff">ShowCalDiff</string>
    <string name="hint_foods">输入食物名称</string>
    <string name="hint_account_foods">输入食物数量</string>

</resources>
