<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:id="@+id/text_step_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:text="@string/text_inited_motion_number"
        />    
    <Button
        android:layout_marginTop="120dp"
        android:id="@+id/button_start_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_sport" 
        />

    <Button
        android:id="@+id/button_stop_walk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/btn_stop_sport" 
        />
	    
</LinearLayout>
