<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res/com.healthlife"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >
    
    <LinearLayout
        android:id="@+id/lineartop"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="#f0f0f0" >
        <ImageView 
            android:layout_width="64dp"
            android:layout_height="74dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/heart_ins1" />
        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="24dp"
	        android:layout_marginTop="14dp"
	        android:orientation="vertical" >
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="如何测？"
		        android:textSize="18sp"
		        android:textColor="#3498db" />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="8dp"
		        android:text="1.点击“点我开始测量”"
		        android:textSize="14sp" />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:text="2.轻轻把食指放在手机摄像头上"
		        android:textSize="14sp" />
	        <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="4dp"
		        android:text="3.保持一段时间直到测量完毕"
		        android:textSize="14sp" />
        </LinearLayout>
        <ImageView 
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/heart_ins2" />
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/linearmid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_centerInParent="true"
        android:layout_below="@id/lineartop" >

    <RelativeLayout
        android:id="@+id/cameraview"
        android:layout_width="200dp"
        android:layout_height="240dp"
        android:padding="15dp"
        android:layout_centerInParent="true" >
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/hrhelpbt"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="12sp"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/hrhelpbt"
	        android:layout_alignRight="@id/hrhelpbt"
            android:text="@string/bpm"
            android:textColor="#e74c3c"
            android:textSize="15sp"
            android:id="@+id/BPM"/>
        
        <TextView
	        android:id="@+id/hrresulttext"
	        android:layout_width="wrap_content"
	        android:layout_height="54dp"
            android:layout_toLeftOf="@id/BPM"
            android:layout_above="@id/hrhelpbt"
	        android:layout_alignLeft="@id/hrhelpbt"
	        android:text="@string/hrinit"
	        android:textSize="50sp" />
        
        
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_above="@id/BPM"
            android:id="@+id/heartimg"
            android:layout_toRightOf="@id/hrresulttext"/> 
        
        <com.healthlife.util.RoundProgressBar 
            android:id="@+id/roundbar"    
	        android:layout_width="200dp"    
	        android:layout_height="200dp" 
	       	android:layout_gravity="bottom"
	        android_custom:roundColor="#393939"    
	        android_custom:roundProgressColor="#e74c3c"    
	        android_custom:textColor="#9A32CD"    
	        android_custom:textIsDisplayable="false"    
	        android_custom:roundWidth="10dp"    
	        android_custom:textSize="18sp"/>
        
    </RelativeLayout>
       <Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_horizontal"
	        android:id="@+id/historybt"
	        android:background="@drawable/heart_historybtn_selector" />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center_horizontal"
           android:layout_marginTop="3dp"
           android:textSize="15sp"
           android:text="测量历史" />
    </LinearLayout>
   
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_below="@id/linearmid"
	    android:orientation="vertical"
	    android:layout_marginTop="10dp" >
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:padding="5dp"
		    android:background="#f0f0f0" >
	
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hrlast"
		        android:textSize="13sp"
		        android:textStyle="bold" />
		    
		</LinearLayout>
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal"
		    android:gravity="center"
		    android:padding="5dp" >
		    <ImageView
		        android:id="@+id/hrlasttype"
		        android:layout_width="30dp"
		        android:layout_height="30dp"
		        android:layout_marginLeft="15dp" />
		    
			<TextView
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
	       		android:layout_marginLeft="15dp"
		    	android:textColor="#393939"
		        android:textSize="15sp"
		    	android:id="@+id/hrlastdate" />
			<TextView
		        android:id="@+id/hrlast"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	       		android:layout_marginLeft="15dp"
	       		android:textColor="#3498db"
		        android:textSize="15sp"
		        android:text="00" />
			<TextView
		        android:id="@+id/lastbpm"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	       		android:layout_marginLeft="10dp"
		        android:textSize="15sp"
		        android:textColor="#e74c3c"
		        android:text="BPM" />
		    
		</LinearLayout>

	</LinearLayout>
    
</RelativeLayout>